# agri

./: .gitignore  .replit  CAPITAL_ONE_LAUNCHPAD_SUBMISSION.md  DEPLOYMENT_GUIDE.md  README.md  app.py  deployment-files.txt  main.py  pyproject.toml  replit.md  requirements.txt  workflow.html
agents/: __init__.py  agno_system.py  base_agent.py  crop_agent.py  finance_agent.py  image_agent.py  market_agent.py  policy_agent.py  weather_agent.py
attached_assets/: Pasted--API-Configuration-Groq-API-Connected-Weather-API-Connected-User-Profile-Prefer-1754714451022_1754714451023.txt  Pasted--API-Configuration-Groq-API-Connected-Weather-API-Connected-User-Profile-Prefer-1754714897803_1754714897803.txt  Pasted--API-Configuration-Groq-API-Connected-Weather-API-Connected-User-Profile-Prefer-1754715876729_1754715876730.txt  Pasted--API-Configuration-Groq-API-Connected-Weather-API-Connected-User-Profile-Prefer-1754720380823_1754720380825.txt  Pasted--API-Configuration-Groq-API-Connected-Weather-API-Connected-User-Profile-Prefer-1754720458346_1754720458348.txt  Pasted--The-Challenge-Exploring-and-Building-Agentic-AI-Solutions-for-a-High-Impact-Area-of-Society-Agri-1754711988516_1754711988518.txt  Pasted-Based-on-your-comprehensive-AgriAI-Advisor-application-here-are-key-suggestions-to-improve-function-1754715516516_1754715516517.txt  Pasted-Looking-at-your-AgriAI-Advisor-code-I-can-identify-several-potential-fallback-scenarios-and-areas-w-1754713467684_1754713467685.txt  Pasted-USER-INPUT-Text-Voice-Image-PDF-Location-Input-Handling-Layer--1754712065277_1754712065277.txt  (+5 more)
(+7 files in other folders)
