[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.9",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "groq>=0.31.0",
    "numpy>=2.3.2",
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "phidata>=2.7.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
]
